<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.flauschcode.broccoli.recipe.cooking.ScalingDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?dialogPreferredPadding"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_scale_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:checkedButton="@id/button_simple_scaling">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_simple_scaling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{() -> viewModel.enableSimpleMode()}"
                android:text="@string/scaling_simple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pro_scaling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick="@{() -> viewModel.disableSimpleMode()}"
                android:text="@string/scaling_pro" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_simple_scaling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.isSimpleMode? View.VISIBLE : View.GONE}"
        app:startIconDrawable="@drawable/ic_minus_24"
        app:endIconDrawable="@drawable/ic_plus_24"
        app:endIconMode="custom"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:hint="@{viewModel.servings.label == null? @string/recipe_amount : viewModel.servings.label.empty? @string/servings : viewModel.servings.label}">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_of_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:text="@={viewModel.numberOfServings}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pro_scaling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.isSimpleMode? View.GONE : View.VISIBLE}"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="0dp"
        android:hint="@string/scaling_factor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/scale_factor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:text="@={viewModel.scaleFactor}"/>

    </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</layout>