...
            app:layout_constraintBottom_toTopOf="@id/cooking_assistant_controls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/cooking_assistant_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="32dp"
                android:text="@{viewModel.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/cooking_assistant_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_for_accessibility"
                android:scrollbars="vertical"
                android:text="@{viewModel.text}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
...
