<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fullscreen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/cooking_mode_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:icon="@drawable/ic_close_24dp"
        app:iconGravity="textTop"
        android:layout_gravity="top|start"
        android:contentDescription="@android:string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_scaling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:icon="@drawable/ic_tune_24"
        app:iconGravity="textTop"
        android:layout_gravity="top|end"
        android:contentDescription="@string/adjust_ingredients" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>