...

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="servings">Servings</string>
    <string name="preparation_time">Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="nutritional_values">Nutrition</string>
    <string name="notes">Notes</string>

    <string name="serving">Serving</string>
    <string name="calories">Calories</string>
...
